# Jelkulator

./: GenerateStils.ipynb  positions.csv  pyproject.toml  shell.nix
